# autostruct

./: CMakeLists.txt  client.cpp  client.h  common.h  endpoint.h  iroute_handler.h  main.cpp  router.h  serializable.h  server.cpp  server.h
app/: main.cpp
app/models/: analytics_event.h  device_info.h  log_entry.h  product.h  proxy.h  simple_test.h  transaction.h  user_info.h  weather_data.h
lib/client/: client.h
lib/core/: utils.h
lib/server/: endpoint_registry.h  iroute_handler.h  router.h  server.cpp
